# fixed-byte-pair-compress

./: CMakeLists.txt  LICENSE.txt  README.md  TODO.txt
examples/: text.txt
res/templates/: Dictionary.c.jinja  Dictionary.h.jinja
scripts/: BuildDictionary.c.jinja  BuildDictionary.h.jinja  BuildDictionary.py  EncodeFile.c.jinja  EncodeFile.h.jinja  EncodeFile.py
src/: CMakeLists.txt  Compress.cpp  Compress.h  Decompress.c  Decompress.h  Fbp.c  Fbp.h  Fbp_Messages.c  Fbp_Messages.h  module_fbp.c
tools/: CMakeLists.txt  CompressCli.cpp  Example.cpp  fbp_decode.c  fbp_encode.c
